testing/stage_12/invalid/int_char.c
int main() 
{
	int char a=2;
	return 2;
}